--- a/style.css
+++ b/style.css
@@ -23,9 +23,14 @@ div.content img {
 	-moz-box-shadow: 2px 2px 10px #909090;
 	-webkit-box-shadow: 2px 2px 10px #909090;
 	box-shadow: 2px 2px 10px #909090;
+	max-width: 50%;
+	max-height: 50%;
+	display: block;
+	margin: 10px auto;
 }
 p {
 	line-height: 200%;
+	vertical-align: middle;
 }
 a {
 	text-decoration: none;
@@ -43,10 +48,4 @@ div.content a {
 div.content a:hover {
 	background-color: #eee;
 	border-radius: 5px;
-}
-div.content img {
-	max-width: 50%;
-	max-height: 50%;
-	display: block;
-	margin: 0px auto;
 }
