--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	padding-right: 10%;
 	padding-bottom: 20px;
 }
-@media only screen and (min-device-width: 320px) and (max-device-width: 720px){
+@media only screen and (max-device-width: 720px){
 	body {
 		padding-left: 10px;
 		padding-right: 10px;
