--- a/style.css
+++ b/style.css
@@ -25,15 +25,6 @@ div.content {
 	-webkit-box-shadow: 0px 0px 5px #909090;
 	box-shadow: 0px 0px 5px #909090;
 }
-div.content img {
-	-moz-box-shadow: 2px 2px 10px #909090;
-	-webkit-box-shadow: 2px 2px 10px #909090;
-	box-shadow: 2px 2px 10px #909090;
-	max-width: 65%;
-	max-height: 80%;
-	display: block;
-	margin: 10px auto;
-}
 div.content:after {
 	content:"";
 	position:absolute;
@@ -42,9 +33,9 @@ div.content:after {
 	right:10px;
 	width:50%;
 	height:10%;
-	-moz-box-shadow: 0px 0px 10px #909090;
-	-webkit-box-shadow: 0px 0px 10px #909090;
-	box-shadow: 0px 10px 10px #909090;
+	-moz-box-shadow: 0px 0px 15px;
+	-webkit-box-shadow: 0px 0px 15px;
+	box-shadow: 0px 10px 15px;
 	-webkit-transform:rotate(2deg);
 	-moz-transform:rotate(2deg);
 	-o-transform:rotate(2deg);
@@ -70,4 +61,13 @@ div.content a {
 div.content a:hover {
 	background-color: #eee;
 	border-radius: 5px;
+}
+div.content img {
+	-moz-box-shadow: 2px 2px 10px #909090;
+	-webkit-box-shadow: 2px 2px 10px #909090;
+	box-shadow: 2px 2px 10px #909090;
+	max-width: 65%;
+	max-height: 80%;
+	display: block;
+	margin: 10px auto;
 }
