--- a/style.css
+++ b/style.css
@@ -71,11 +71,11 @@ div.content img {
 	display: block;
 	margin: 10px auto;
 }
-span.top{
-	cursor: pointer;
-	opacity:0;
-	position: fixed;
-	right: 40px;
-	bottom: 25px;
-	transition: opacity 0.7s;
-}
+/*span.top{*/
+	/*cursor: pointer;*/
+	/*opacity:0;*/
+	/*position: fixed;*/
+	/*right: 40px;*/
+	/*bottom: 25px;*/
+	/*transition: opacity 0.7s;*/
+/*}*/
